mac getIpByName liefert name von IPnum

opsi-script (4.12.7.5) unreleased; urgency=medium

  * [fix]  osparser.pas: tsIncludeInsert: if include file not found: not failed in testsyntax mode
  * [fix]  osparser.pas: tsIncludeAppend: if include file not found: not failed in testsyntax mode

-- d.oertel <d.oertel@uib.de> Wed, 04 Jan 2023 15:00

opsi-script (4.12.7.4) testing; urgency=medium

  * [fix]  osparser.pas: procedure TuibRegistry.WriteEntry: conversion for large values (DWORD) now works correct (!110, j.werner)
  * [fix]  osparser.pas: registry exportformat: hexdecimal values which can be interpreted as decimal values are now handled correct (!110, j.werner)

-- j.werner <j.werner@uib.de> 16 December 2022


opsi-script (4.12.7.3) testing; urgency=medium

  * [fix]  osparser.pas: registry exportformat hexdecimal values without leading $ throw no syntax errors anymore (!108, j.werner)

-- j.werner <j.werner@uib.de> 14 December 2022


opsi-script (4.12.7.2) testing; urgency=medium

  * [fix] osparser: linkActionsMain: fix default values for multiple links in one LinkFolder section (!105, a.schmitz)
  * [fix] testsyntax: exitcode reset to zero on interactive testsyntax or start button; fixes #4808 (!104, d.oertel)
  * [fix] testsyntax: fix testsyntax for sleepsecond (tsSleep) (!104, d.oertel)
  * [fix] osinteractivegui: fix IFDEF for jedi code formatting, Ctrl-D (!104, d.oertel)

-- j.werner <j.werner@uib.de> 05 December 2022


opsi-script (4.12.7.1) unreleased; urgency=medium

  * [fix] osparser: linkActionsMain: fix multiple links in one LinkFolder section (!103, a.schmitz)
  * [fix] osjson.pas: function stringListToJsonArray: remove adding quotes if string is not quoted because this former behaviour is problematic e.g it could lead to invalid json. (!101, j.werner)

-- j.werner <j.werner@uib.de> 27 November 2022

opsi-script (4.12.7.0) unreleased; urgency=medium
